2003-12-08  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc, buffer.h, SFtp.cc, SFtp.h: (DirectedBuffer) new buffer
	  layer; add iconv support in DirectedBuffer, almost transparent.

2003-12-08  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc: (find_eol, try_csm_proxy) fix bugs found by
	  Solar Designer <solar@openwall.com> - increment *eol_size,
	  not eol_size; use proper %lld format for size; use larger
	  buffer for additional_file_info to store trailing \0; some
	  style mods; use %32s instead of %32c.

2003-12-08  Harnhammar, Ulf <Ulf.Harnhammar.9485@student.uu.se>

	* HttpDir.cc: (try_netscape_proxy, try_squid_eplf) fixed buffer overflows.

2003-12-01  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc, buffer.h: move SMTask to IOBuffer.
	* FileAccess.cc, OutputJob.cc: Delete -> delete for Buffer.
	* FileCopy.cc, FileCopy.h: use IOBuffer as base class for FileCopyPeer.
	* FindJob.h, FindJobDu.h, Fish.cc, Fish.h, FtpDirList.cc, FtpDirList.h,
	  HttpDir.h, LocalAccess.cc, LocalAccess.h, Resolver.cc, Resolver.h:
	  use IOBuffer.
	* NetAccess.cc, NetAccess.h: use IOBuffer; FindHomeAuto in ctor.
	* SFtp.cc, SFtp.h: fixed FSTAT request (protocol_version was duplicated);
	  fixed STAT/FSTAT for protocol v4 - add flags field.

2003-12-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix possible freed memory access.
	* MirrorJob.cc: don't append basename of source to / destination.

2003-11-26  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc: add ftps to acceptable fxp protocols.
	* Fish.cc, SFtp.cc: report status from PtyShell.
	* PtyShell.cc: close pipes correctly.
	* buffer.cc, buffer.h: add Status method.

2003-11-21  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, SFtp.cc, resource.cc: allow args in connect-program
	  resource; move -a and -x options to connect-program.
	* Makefile.am: rename lftp libs.

2003-11-20  Alexander V. Lukyanov <lav@yars.free.net>
